--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 		<h1>HolaMundo</h1>
 		<a href="antoniolopezvalencia.html">AntonioLópezValencia</a>
 		<a href="josemanuellopezvalencia.html">José Manuel López Valencia</a>
+		<a href="joseluis.html">José Luis Chávez</a>
 	</body>
 </html>
