--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 		<a href="antoniolopezvalencia.html">AntonioLópezValencia</a>
 		<a href="josemanuellopezvalencia.html">José Manuel López Valencia</a>
 		<a href="joseluis.html">José Luis Chávez</a>
+		<a href="InfoFran.html">Fran Gutierrez</a>
 	</body>
 </html>
