--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<a href="josemanuellopezvalencia.html">José Manuel López Valencia</a>
 		<a href="joseluis.html">José Luis Chávez</a>
 		<a href="InfoFran.html">Fran Gutierrez</a>
+		<a href="curriculumjuanantonio.html"></a>
 	</body>
 </html>
